# yolo-learn

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/data/: coco128.yaml  custom_example.yaml
configs/pedagogy/: common_mistakes.yaml
configs/pedagogy/checkpoints/: 01_what_is_object_detection.yaml  02_dataset_and_annotations.yaml  03_yolo_architecture.yaml  04_inference_with_pretrained.yaml  05_training_basics.yaml  06_transfer_learning.yaml  07_evaluation_metrics.yaml  08_data_augmentation.yaml  09_custom_dataset.yaml  10_export_and_deploy.yaml
configs/train/: baseline.yaml  finetune.yaml
deploy/: README.md
deploy/docker/: Dockerfile  Dockerfile.gpu  start.sh
docs/: cheatsheet.md  faq.md  yolo_learning_plan.md  yolo_theory.md
docs/adr/: 0001-single-package-over-monorepo.md  0002-thin-wrapper-ultralytics.md
docs/agents/: domain.md
docs/diagrams/: README.md
docs/images/: README.md
docs/spark/: 2026-07-14-mlops-engineering-design.md
notebooks/: 01_what_is_object_detection.ipynb  02_dataset_and_annotations.ipynb  03_yolo_architecture.ipynb  04_inference_with_pretrained.ipynb  05_training_basics.ipynb  06_transfer_learning.ipynb  07_evaluation_metrics.ipynb  08_data_augmentation.ipynb  09_custom_dataset.ipynb  10_export_and_deploy.ipynb  README.md
practice/: README.md  download.py  evaluation.py  solution.ipynb
scripts/: download_dataset.py  export.py  train.py
src/yolo_learn/: __init__.py  metrics.py  visualize.py
src/yolo_learn/data/: __init__.py  augment.py  dataset.py  download.py
src/yolo_learn/eval/: __init__.py  evaluate.py  metrics.py
tests/: conftest.py  test_augment.py  test_evaluate.py  test_metrics.py  test_train.py
tests/test_models/: test_benchmark.py
tests/test_pedagogy/: test_checkpoint.py  test_reflection.py  test_scaffold.py
tests/test_serve/: test_api.py
(+15 files in other folders)
