[project]
name = "yolo-learn"
version = "0.1.0"
description = "系统学习 YOLO 目标检测：从原理到实践"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ultralytics>=8.3.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "onnx>=1.14.0",
    "coremltools>=7.0",
    "roboflow>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yolo_learn"]

[tool.ruff]
line-length = 100
target-version = "py313"
